--- a/privacy.html
+++ b/privacy.html
@@ -1,59 +1,131 @@
-Privacy Policy for ClipVault
-Last Updated: July 27, 2025
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - ClipVault</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #ffffff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            font-size: 2.5em;
+            color: #212529;
+            border-bottom: 2px solid #dee2e6;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 1.8em;
+            color: #495057;
+            margin-top: 40px;
+            border-bottom: 1px solid #e9ecef;
+            padding-bottom: 8px;
+        }
+        h3 {
+            font-size: 1.3em;
+            color: #495057;
+            margin-top: 30px;
+        }
+        p, li {
+            font-size: 1em;
+            color: #495057;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        strong {
+            color: #212529;
+        }
+        code {
+            background-color: #e9ecef;
+            padding: 2px 6px;
+            border-radius: 4px;
+            font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+        }
+    </style>
+</head>
+<body>
 
-Thank you for choosing ClipVault ("we," "us," "our"). Your trust is our most important asset, and we are committed to protecting your privacy. This Privacy Policy explains what information our Chrome Extension, ClipVault: Secure Clipboard History & Sync (the "Extension"), collects and how we use and protect it.
+    <div class="container">
+        <h1>Privacy Policy for ClipVault</h1>
 
-Our core philosophy is Trust as a Feature. We've designed the Extension from the ground up to be privacy-first.
+        <p><strong>Last Updated: July 27, 2025</strong></p>
 
-1. The Core Principle: You Control Your Data
-For the free version of ClipVault, your clipboard history is stored exclusively on your local computer using your browser's secure storage (chrome.storage.local). We, the developers of ClipVault, do not have access to this data. It never touches our servers. Your data is your own.
+        <p>Thank you for choosing ClipVault ("we," "us," "our"). Your trust is our most important asset, and we are committed to protecting your privacy. This Privacy Policy explains what information our Chrome Extension, ClipVault: Secure Clipboard History & Sync (the "Extension"), collects and how we use and protect it.</p>
 
-2. Information We Collect
-We have built ClipVault to collect the absolute minimum amount of information necessary to provide and improve the service.
+        <p>Our core philosophy is <strong>Trust as a Feature</strong>. We've designed the Extension from the ground up to be privacy-first.</p>
 
-a) Data You Store in the Extension (Free Version)
-Clipboard History: The text snippets you copy, the source URL (if copied from a web page), and the time of the copy are collected by the Extension and stored locally on your device. Again, we cannot see, access, or transmit this data.
+        <h2>1. The Core Principle: You Control Your Data</h2>
+        <p>For the free version of ClipVault, your clipboard history is stored <strong>exclusively on your local computer</strong> using your browser's secure storage (<code>chrome.storage.local</code>). We, the developers of ClipVault, <strong>do not have access</strong> to this data. It never touches our servers. Your data is your own.</p>
 
-b) Data for Premium Services (ClipVault Pro)
-If you choose to upgrade to ClipVault Pro and purchase a license key, we handle the following:
+        <h2>2. Information We Collect</h2>
+        <p>We have built ClipVault to collect the absolute minimum amount of information necessary to provide and improve the service.</p>
 
-License Key: To activate the Pro features, you provide a license key that you receive upon purchase.
+        <h3>a) Data You Store in the Extension (Free Version)</h3>
+        <ul>
+            <li><strong>Clipboard History:</strong> The text snippets you copy, the source URL (if copied from a web page), and the time of the copy are collected by the Extension and stored locally on your device. Again, we <strong>cannot</strong> see, access, or transmit this data.</li>
+        </ul>
 
-Verification Status: We store a simple true or false value locally in your browser's storage (chrome.storage.local) to indicate whether you are a premium user. This allows the Extension to unlock Pro features without repeatedly checking your license.
+        <h3>b) Data for Premium Services (ClipVault Pro)</h3>
+        <p>If you choose to upgrade to ClipVault Pro and purchase a license key, we handle the following:</p>
+        <ul>
+            <li><strong>License Key:</strong> To activate the Pro features, you provide a license key that you receive upon purchase.</li>
+            <li><strong>Verification Status:</strong> We store a simple <code>true</code> or <code>false</code> value locally in your browser's storage (<code>chrome.storage.local</code>) to indicate whether you are a premium user. This allows the Extension to unlock Pro features without repeatedly checking your license.</li>
+        </ul>
 
-c) Information We Do Not Collect
-We are explicit about what we do not collect:
+        <h3>c) Information We Do Not Collect</h3>
+        <p>We are explicit about what we <strong>do not</strong> collect:</p>
+        <ul>
+            <li>We do not collect any personal information like your name, email address (unless you voluntarily provide it for support), or physical address.</li>
+            <li>We do not track your Browse history or your activity across different websites.</li>
+            <li>We do not use analytics or tracking cookies within the Extension's popup window.</li>
+        </ul>
 
-We do not collect any personal information like your name, email address (unless you voluntarily provide it for support), or physical address.
+        <h2>3. How We Use Your Information</h2>
+        <ul>
+            <li><strong>To Provide Core Functionality:</strong> The locally stored clipboard history is used to display your clips back to you so you can search, pin, and manage them.</li>
+            <li><strong>To Activate Premium Features:</strong> Your license key is used for a one-time verification with our payment processor (Gumroad) to confirm a valid purchase and unlock Pro features. We do not store your license key on our servers.</li>
+        </ul>
 
-We do not track your Browse history or your activity across different websites.
+        <h2>4. Third-Party Services</h2>
+        <ul>
+            <li><strong>Gumroad, Inc.:</strong> We use Gumroad as our third-party payment processor to handle license key sales and verification. When you purchase a license, you are subject to Gumroad's Privacy Policy. We send your license key to Gumroad's API for verification, but we do not share any other personal data with them.</li>
+        </ul>
 
-We do not use analytics or tracking cookies within the Extension's popup window.
+        <h2>5. Data Storage and Security</h2>
+        <ul>
+            <li><strong>Local-First Architecture:</strong> As stated, all your clipboard history data for the free version is stored on your local device.</li>
+            <li><strong>End-to-End Encryption (E2EE) for Pro Users:</strong> The upcoming Cloud Sync feature for Pro users will be built with a zero-knowledge architecture. This means your clipboard data will be encrypted on your device <strong>before</strong> it is sent to our servers for syncing. We will never have the keys to decrypt your data. This ensures that even in the event of a server breach, your clipboard history remains unreadable and secure.</li>
+        </ul>
 
-3. How We Use Your Information
-To Provide Core Functionality: The locally stored clipboard history is used to display your clips back to you so you can search, pin, and manage them.
+        <h2>6. Your Rights</h2>
+        <p>You have the right to manage your data at any time. You can:</p>
+        <ul>
+            <li><strong>Delete individual clips</strong> from your history.</li>
+            <li><strong>Delete your entire clipboard history</strong> using the "Clear All" button.</li>
+            <li><strong>Uninstall the Extension,</strong> which will remove all locally stored data associated with it.</li>
+        </ul>
 
-To Activate Premium Features: Your license key is used for a one-time verification with our payment processor (Gumroad) to confirm a valid purchase and unlock Pro features. We do not store your license key on our servers.
+        <h2>7. Changes to This Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on our website and updating the "Last Updated" date at the top of this policy.</p>
 
-4. Third-Party Services
-Gumroad, Inc.: We use Gumroad as our third-party payment processor to handle license key sales and verification. When you purchase a license, you are subject to Gumroad's Privacy Policy. We send your license key to Gumroad's API for verification, but we do not share any other personal data with them.
+        <h2>8. Contact Us</h2>
+        <p>If you have any questions or concerns about this Privacy Policy, please contact us at: <strong>[Your Support Email Address Here]</strong></p>
+    </div>
 
-5. Data Storage and Security
-Local-First Architecture: As stated, all your clipboard history data for the free version is stored on your local device.
-
-End-to-End Encryption (E2EE) for Pro Users: The upcoming Cloud Sync feature for Pro users will be built with a zero-knowledge architecture. This means your clipboard data will be encrypted on your device before it is sent to our servers for syncing. We will never have the keys to decrypt your data. This ensures that even in the event of a server breach, your clipboard history remains unreadable and secure.
-
-6. Your Rights
-You have the right to manage your data at any time. You can:
-
-Delete individual clips from your history.
-
-Delete your entire clipboard history using the "Clear All" button.
-
-Uninstall the Extension, which will remove all locally stored data associated with it.
-
-7. Changes to This Privacy Policy
-We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on our website and updating the "Last Updated" date at the top of this policy.
-
-8. Contact Us
-If you have any questions or concerns about this Privacy Policy, please contact us at: [Your Support Email Address Here]
+</body>
+</html>
