--- a/privacy.html
+++ b/privacy.html
@@ -124,7 +124,7 @@
         <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on our website and updating the "Last Updated" date at the top of this policy.</p>
 
         <h2>8. Contact Us</h2>
-        <p>If you have any questions or concerns about this Privacy Policy, please contact us at: <strong>[Your Support Email Address Here]</strong></p>
+        <p>If you have any questions or concerns about this Privacy Policy, please contact us at: <strong>mdanwarulislamshawn@gmail.com</strong></p>
     </div>
 
 </body>
